--- a/app/views/login/login.component.html
+++ b/app/views/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="row" style="margin-top: 7%">
   <h4 class="text-center">Inici de sessió</h4><br>
 </div>
@@ -19,4 +20,5 @@
     </form>
   </div>
   <div class="col"></div>
+</div>
 </div>
