--- a/app/views/admin/gestio-sales/gestio-sales.component.html
+++ b/app/views/admin/gestio-sales/gestio-sales.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
+<div class="container">
   <div class="row" style="margin-top: 20px">
     <div class="col-lg-4 col-md-3" style="margin-bottom: 20px;border: 1px solid black" *ngFor="let sala of salas">
       <div>
@@ -14,4 +15,5 @@
   <div class="col-5"></div>
   <button (click)="crearSala()" class="col-2">Crear sala</button>
   <div class="col-5"></div>
+</div>
 </div>
