--- a/app/views/admin/gestio-usuaris/gestio-usuaris.component.html
+++ b/app/views/admin/gestio-usuaris/gestio-usuaris.component.html
@@ -23,7 +23,7 @@
     <div class="col"></div>
   </div>
 </div>
-<div>
+<div class="container">
   <div class="row justify-content-center" style="margin-top: 20px">
     <div class="col"></div>
     <div class="col-md-4 align-self-center" style="border: 1px solid black">
