Pantalla la meva sala

--- a/app/views/sala-usuari/sala-usuari.component.html
+++ b/app/views/sala-usuari/sala-usuari.component.html
@@ -1,1 +1,31 @@
-<p>sala-usuari works!</p>
+<ng-container *ngIf="user">
+  <app-navbar></app-navbar>
+  <ng-container *ngIf="user.sala > 0; else no_sala">
+    <h1 class="text-center">Sala {{user.sala}}</h1>
+    <div class="container">
+      <div class="row-cols-1">
+        <div class="col" style="margin-bottom: 20px;border: 1px solid black">
+          <h5>Els teus companys:</h5>
+          <ul>
+            <ng-container *ngFor="let comp of companys">
+              <li>{{comp.name}} {{comp.second_name}} {{comp.third_name}}</li>
+            </ng-container>
+          </ul>
+        </div>
+        <div class="col" style="margin-bottom: 20px;border: 1px solid black">
+          <h5>El teu mentor:</h5>
+          <ng-container *ngIf="mentor.name != '';else no_mentor">
+            <ul><li>{{mentor.name}} {{mentor.second_name}} {{mentor.third_name}}</li></ul>
+          </ng-container>
+          <ng-template #no_mentor>
+            <p>Encara no se us ha assignat cap mentor</p>
+          </ng-template>
+        </div>
+      </div>
+    </div>
+  </ng-container>
+  <ng-template #no_sala>
+    <h5 class="text-center" style="margin-top: 20px">No pertanys a cap sala, afegeix-te a una sala aquí: <a [routerLink]="['/sales']">Llista de sales</a></h5>
+  </ng-template>
+</ng-container>
+
