--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -39,7 +39,7 @@
         <div class="row">
           <div class="col-1"></div>
           <div class="col-5">
-            <button [routerLink]="['/sales']" style="width: 100%">Sales</button>
+            <button [routerLink]="['/sales']" style="width: 100%">Sales disponibles</button>
           </div>
           <div class="col-5">
             <button [routerLink]="['/la_meva_sala']" style="width: 100%">La meva sala</button>
