--- a/app/views/admin/gestio-usuaris/gestio-usuaris.component.html
+++ b/app/views/admin/gestio-usuaris/gestio-usuaris.component.html
@@ -44,7 +44,7 @@
           </div>
           <div class="mb-3">
             <label>Correu electrònic</label>
-            <input type="email" class="form-control" formControlName="email">
+            <input type="email" class="form-control" formControlName="mail">
           </div>
           <div class="mb-3">
             <label>Contrasenya</label>
