--- a/app/views/register/register.component.html
+++ b/app/views/register/register.component.html
@@ -22,7 +22,7 @@
 
       <div class="mb-3">
         <label>Correu electrònic</label>
-        <input type="email" class="form-control" formControlName="email">
+        <input type="email" class="form-control" formControlName="mail">
       </div>
 
       <div class="mb-3">
