--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -6,10 +6,10 @@
       <div class="row">
         <div class="col-1"></div>
         <div class="col-5">
-          <button [routerLink]="['/admin/gestio_sales']" style="width: 100%">Gestionar sales</button>
+          <button class="btn btn-primary" [routerLink]="['/admin/gestio_sales']" style="width: 100%">Gestionar sales</button>
         </div>
         <div class="col-5">
-          <button [routerLink]="['/admin/gestio_usuaris']" style="width: 100%">Gestionar usuaris</button>
+          <button class="btn btn-primary" [routerLink]="['/admin/gestio_usuaris']" style="width: 100%">Gestionar usuaris</button>
         </div>
         <div class="col-1"></div>
       </div>
@@ -39,10 +39,10 @@
         <div class="row">
           <div class="col-1"></div>
           <div class="col-5">
-            <button [routerLink]="['/sales']" style="width: 100%">Sales disponibles</button>
+            <button class="btn btn-primary" [routerLink]="['/sales']" style="width: 100%">Sales disponibles</button>
           </div>
           <div class="col-5">
-            <button [routerLink]="['/la_meva_sala']" style="width: 100%">La meva sala</button>
+            <button class="btn btn-primary" [routerLink]="['/la_meva_sala']" style="width: 100%">La meva sala</button>
           </div>
           <div class="col-1"></div>
         </div>
