--- a/app/views/login/login.component.html
+++ b/app/views/login/login.component.html
@@ -1,24 +1,23 @@
 <div class="container">
-<div class="row" style="margin-top: 7%">
-  <h4 class="text-center">Inici de sessió</h4><br>
-</div>
-<div class="row">
-  <div class="col"></div>
-  <div class=" col-4 justify-content-center">
-    <form [formGroup]="loginForm" (ngSubmit)="signIn()" novalidate>
-      <div class="mb-3">
-        <label>Correu electrònic</label>
-        <input type="email" class="form-control" formControlName="email">
+    <div class="row" style="margin-top: 20px">
+      <div class="col"></div>
+      <div class="col-4 justify-content-center" style="border: 1px solid black">
+        <h4 class="text-center">Inici de sessió</h4>
+        <form [formGroup]="loginForm" (ngSubmit)="signIn()" novalidate>
+          <div class="mb-3">
+            <label>Correu electrònic</label>
+            <input type="email" class="form-control" formControlName="email">
+          </div>
+          <div class="mb-3">
+            <label>Contrasenya</label>
+            <input type="password" class="form-control" formControlName="password">
+          </div>
+          <div class="justify-content-center text-center" style="margin-bottom: 10px">
+            <button type="submit" class="btn btn-primary" style="margin: 0 auto; display: block" [disabled]="!loginForm.valid">Inicia sessió</button><br>
+            <p>No tens compte?</p><button class="btn btn-primary" style="margin: 0 auto; display: block" [routerLink]="['/register']">Registra't</button>
+          </div>
+        </form>
       </div>
-
-      <div class="mb-3">
-        <label>Contrasenya</label>
-        <input type="password" class="form-control" formControlName="password">
-      </div>
-        <button type="submit" class="btn btn-primary" style="margin: 0 auto; display: block" [disabled]="!loginForm.valid">Inicia sessió</button><br>
-        <button class="btn btn-primary" style="margin: 0 auto; display: block" [routerLink]="['/register']">Registra't</button>
-    </form>
-  </div>
-  <div class="col"></div>
-</div>
+      <div class="col"></div>
+    </div>
 </div>
