--- a/app/views/register/register.component.html
+++ b/app/views/register/register.component.html
@@ -1,42 +1,38 @@
-<div class="row" style="margin-top: 7%">
-  <h4 class="text-center">Registre</h4><br>
-</div>
-<div class="row">
-  <div class="col"></div>
-  <div class="col-4 justify-content-center">
-    <form [formGroup]="registerForm" (ngSubmit)="createUser()" novalidate>
-      <div class="mb-3">
-        <label>Nom</label>
-        <input class="form-control" formControlName="name">
-      </div>
-
-      <div class="mb-3">
-        <label>Primer cognom</label>
-        <input class="form-control" formControlName="second_name">
-      </div>
-
-      <div class="mb-3">
-        <label>Segon cognom</label>
-        <input class="form-control" formControlName="third_name">
-      </div>
-
-      <div class="mb-3">
-        <label>Correu electrònic</label>
-        <input type="email" class="form-control" formControlName="mail">
-      </div>
-
-      <div class="mb-3">
-        <label>Contrasenya</label>
-        <input type="password" class="form-control" formControlName="password">
-      </div>
-
-      <div class="mb-3">
-        <label>Codi del curs</label>
-        <input class="form-control" formControlName="code">
-      </div>
-      <button type="submit" class="btn btn-primary" style="margin: 0 auto; display: block" [disabled]="!registerForm.valid">Registra't</button>
-    </form>
+<div class="container">
+  <div class="row" style="margin-top: 20px">
+    <div class="col"></div>
+    <div class="col-4 justify-content-center" style="border: 1px solid black">
+      <h4 class="text-center">Registre</h4>
+      <form [formGroup]="registerForm" (ngSubmit)="createUser()" novalidate>
+        <div class="mb-3">
+          <label>Nom</label>
+          <input class="form-control" formControlName="name">
+        </div>
+        <div class="mb-3">
+          <label>Primer cognom</label>
+          <input class="form-control" formControlName="second_name">
+        </div>
+        <div class="mb-3">
+          <label>Segon cognom</label>
+          <input class="form-control" formControlName="third_name">
+        </div>
+        <div class="mb-3">
+          <label>Correu electrònic</label>
+          <input type="email" class="form-control" formControlName="mail">
+        </div>
+        <div class="mb-3">
+          <label>Contrasenya</label>
+          <input type="password" class="form-control" formControlName="password">
+        </div>
+        <div class="mb-3">
+          <label>Codi del curs</label>
+          <input class="form-control" formControlName="code">
+        </div>
+        <div style="margin-bottom: 10px">
+          <button type="submit" class="btn btn-primary" style="margin: 0 auto; display: block" [disabled]="!registerForm.valid">Registra't</button>
+        </div>
+      </form>
+    </div>
+    <div class="col"></div>
   </div>
-  <div class="col"></div>
 </div>
-
