--- a/app/views/admin/gestio-sales/gestio-sales.component.html
+++ b/app/views/admin/gestio-sales/gestio-sales.component.html
@@ -37,7 +37,7 @@
 <div class="container">
   <div class="row">
     <div class="col-5"></div>
-    <button (click)="crearSala()" class="col-2">Crear sala</button>
+    <button (click)="crearSala()" class="col-2 btn btn-primary">Crear sala</button>
     <div class="col-5"></div>
   </div>
 </div>
