--- a/app/views/admin/gestio-horaris/gestio-horaris.component.html
+++ b/app/views/admin/gestio-horaris/gestio-horaris.component.html
@@ -1,1 +1,30 @@
-<p>gestio-horaris works!</p>
+<app-navbar></app-navbar>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div style="border: 1px solid black; margin-top: 20px">
+        <div style="margin: 10px">
+          <h3>Horaris disponibles per reunions</h3>
+          <ul>
+            <ng-container *ngFor="let horari of horaris">
+              <div style="margin-bottom: 10px;margin-top: 3px">
+                <li>{{horari | date:'dd-MM-yyyy h:mm a'}}<button style="float: right;display: block" class="btn btn-danger btn-sm" (click)="eliminarHorari(horari)">Eliminar</button></li>
+              </div>
+            </ng-container>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div style="border: 1px solid black; margin-top: 20px">
+        <div style="margin: 10px">
+          <h3>Afegir horari per reunió</h3>
+          <form [formGroup]="horariForm" (ngSubmit)="setHorari()" novalidate>
+            <input type="datetime-local" class="form-control" formControlName="hora"><br>
+            <button type="submit" class="btn btn-primary" style="margin: 0 auto;display: block;" [disabled]="!horariForm.valid">Afegir</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
