--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -73,10 +73,10 @@
         <div class="row">
           <div class="col-1"></div>
           <div class="col-5">
-            <button class="btn btn-primary" [routerLink]="['']" style="width: 100%;height: 50px">Les meves sales</button>
+            <button class="btn btn-primary" [routerLink]="['mentor/gestio_sales']" style="width: 100%;height: 50px">Les meves sales</button>
           </div>
           <div class="col-5">
-            <button class="btn btn-primary" [routerLink]="['']" style="width: 100%;height: 50px">Gestió d'horaris per reunions</button>
+            <button class="btn btn-primary" [routerLink]="['mentor/gestio_horaris']" style="width: 100%;height: 50px">Gestió d'horaris per reunions</button>
           </div>
           <div class="col-1"></div>
         </div>
