--- a/app/views/admin/gestio-usuaris/gestio-usuaris.component.html
+++ b/app/views/admin/gestio-usuaris/gestio-usuaris.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container" style="margin-bottom: 20px">
+  <h1 class="text-center">Gestió d'usuaris</h1>
   <div class="row" style="margin-top: 20px">
     <div class="col-6" style="border: 1px solid black">
       <div style="padding: 20px">
