--- a/app/views/admin/gestio-horaris/gestio-horaris.component.html
+++ b/app/views/admin/gestio-horaris/gestio-horaris.component.html
@@ -1,6 +1,7 @@
 <app-navbar></app-navbar>
 <div class="container">
   <div class="row">
+    <h1 class="text-center">Gestió d'horaris per reunions</h1>
     <div class="col">
       <div style="border: 1px solid black; margin-top: 20px">
         <div style="margin: 10px">
