--- a/app/views/mentor/horaris-mentor/horaris-mentor.component.html
+++ b/app/views/mentor/horaris-mentor/horaris-mentor.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <div class="container">
+  <h1 class="text-center">Gestió d'horaris per reunions</h1>
   <div class="row">
     <div class="col">
       <div style="border: 1px solid black; margin-top: 20px">
