--- a/app/views/admin/gestio-usuaris/gestio-usuaris.component.html
+++ b/app/views/admin/gestio-usuaris/gestio-usuaris.component.html
@@ -2,7 +2,7 @@
 <div class="container" style="margin-bottom: 20px">
   <h1 class="text-center">Gestió d'usuaris</h1>
   <div class="row" style="margin-top: 20px">
-    <div class="col-6" style="border: 1px solid black">
+    <div class="col-5 border border-secondary rounded" style="background-color: rgba(238, 238, 238,0.75)">
       <div style="padding: 20px">
         <h3>Administrador</h3>
         <ng-container *ngFor="let usuari of usuaris">
@@ -18,7 +18,8 @@
         </ng-container>
       </div>
     </div>
-    <div class="col-6" style="border: 1px solid black">
+    <div class="col-2"></div>
+    <div class="col-5 border border-secondary rounded" style="background-color: rgba(238, 238, 238,0.75)">
         <div style="padding: 20px">
           <h2 class="text-center">Registrar usuari</h2>
           <form [formGroup]="registerForm" (ngSubmit)="createUser()" novalidate>
@@ -49,7 +50,7 @@
                 <option>mentor</option>
               </select>
             </div>
-            <button type="submit" class="btn btn-primary" style="margin: 0 auto; display: block" [disabled]="!registerForm.valid">Registra</button>
+            <button type="submit" class="btn btn-secondary" style="margin: 0 auto; display: block" [disabled]="!registerForm.valid">Registra</button>
           </form>
         </div>
     </div>
