--- a/app/views/home/home.component.html
+++ b/app/views/home/home.component.html
@@ -5,25 +5,25 @@
       <h1 class="text-center" style="margin-bottom: 20px">Panell d'administrador</h1>
       <div class="row">
         <div class="col">
-          <button class="btn btn-primary" [routerLink]="['/admin/gestio_sales']" style="width: 100%;height: 50px">Gestionar sales</button>
+          <button class="btn btn-secondary" [routerLink]="['/admin/gestio_sales']" style="width: 100%;height: 50px">Gestionar sales</button>
         </div>
         <div class="col">
-          <button class="btn btn-primary" [routerLink]="['/admin/gestio_usuaris']" style="width: 100%;height: 50px">Gestionar usuaris</button>
+          <button class="btn btn-secondary" [routerLink]="['/admin/gestio_usuaris']" style="width: 100%;height: 50px">Gestionar usuaris</button>
         </div>
         <div class="col">
-          <button class="btn btn-primary" [routerLink]="['/admin/gestio_horaris']" style="width: 100%;height: 50px">Gestionar horaris de reunions</button>
+          <button class="btn btn-secondary" [routerLink]="['/admin/gestio_horaris']" style="width: 100%;height: 50px">Gestionar horaris de reunions</button>
         </div>
       </div>
       <div class="row" style="padding-top: 40px">
         <div class="col"></div>
-        <div class="col-md-3 align-self-center" style="border: 1px solid black">
+        <div class="col-md-3 align-self-center border border-secondary rounded" style="background-color: rgba(238, 238, 238,0.75)">
           <div style="padding: 20px">
-          <h5>Codi del curs: "<span style="font-weight: normal">{{code}}</span>"</h5>
-          <form [formGroup]="codeForm" (ngSubmit)="changeCode()" novalidate>
-            <label>Nou codi</label>
-            <input class="form-control" formControlName="code"><br>
-            <button type="submit" class="btn btn-primary" style="margin: 0 auto;display: block;" [disabled]="!codeForm.valid">Guardar</button>
-          </form>
+            <h5>Codi del curs: "<span style="font-weight: normal">{{code}}</span>"</h5>
+            <form [formGroup]="codeForm" (ngSubmit)="changeCode()" novalidate>
+              <label>Nou codi</label>
+              <input class="form-control" formControlName="code"><br>
+              <button type="submit" class="btn btn-secondary" style="margin: 0 auto;display: block;" [disabled]="!codeForm.valid">Guardar</button>
+            </form>
           </div>
         </div>
         <div class="col"></div>
@@ -34,7 +34,7 @@
     <div *ngIf="user.rol === 'estudiant'; else mentor">
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-5" style="border: 1px solid black;margin: 20px">
+          <div class="col-5 border border-3 border-secondary rounded" style="margin: 20px;background-color: rgba(238, 238, 238,0.75)">
             <div style="margin: 20px">
               <h3>Informació d'usuari:</h3>
               <p style="font-weight: bold">Nom: <span style="font-weight: normal"> {{user.name}} {{user.second_name}} {{user.third_name}}</span></p>
@@ -49,10 +49,10 @@
         <div class="row">
           <div class="col-1"></div>
           <div class="col-5">
-            <button class="btn btn-primary" [routerLink]="['/sales']" style="width: 100%;height: 50px">Sales disponibles</button>
+            <button class="btn btn-secondary" [routerLink]="['/sales']" style="width: 100%;height: 50px">Sales disponibles</button>
           </div>
           <div class="col-5">
-            <button class="btn btn-primary" [routerLink]="['/la_meva_sala']" style="width: 100%;height: 50px">La meva sala</button>
+            <button class="btn btn-secondary" [routerLink]="['/la_meva_sala']" style="width: 100%;height: 50px">La meva sala</button>
           </div>
           <div class="col-1"></div>
         </div>
@@ -61,7 +61,7 @@
     <ng-template #mentor>
       <div class="container">
         <div class="row justify-content-center">
-          <div class="col-5" style="border: 1px solid black;margin: 20px">
+          <div class="col-5 border border-3 border-secondary rounded" style="margin: 20px;background-color: rgba(238, 238, 238,0.75)">
             <div style="margin: 20px">
               <h3>Informació d'usuari:</h3>
               <p style="font-weight: bold">Nom: <span style="font-weight: normal"> {{user.name}} {{user.second_name}} {{user.third_name}}</span></p>
@@ -73,10 +73,10 @@
         <div class="row">
           <div class="col-1"></div>
           <div class="col-5">
-            <button class="btn btn-primary" [routerLink]="['mentor/gestio_sales']" style="width: 100%;height: 50px">Les meves sales</button>
+            <button class="btn btn-secondary" [routerLink]="['mentor/gestio_sales']" style="width: 100%;height: 50px">Les meves sales</button>
           </div>
           <div class="col-5">
-            <button class="btn btn-primary" [routerLink]="['mentor/gestio_horaris']" style="width: 100%;height: 50px">Gestió d'horaris per reunions</button>
+            <button class="btn btn-secondary" [routerLink]="['mentor/gestio_horaris']" style="width: 100%;height: 50px">Gestió d'horaris per reunions</button>
           </div>
           <div class="col-1"></div>
         </div>
