--- a/app/views/mentor/horaris-mentor/horaris-mentor.component.html
+++ b/app/views/mentor/horaris-mentor/horaris-mentor.component.html
@@ -3,14 +3,14 @@
   <h1 class="text-center">Gestió d'horaris per reunions</h1>
   <div class="row">
     <div class="col">
-      <div style="border: 1px solid black; margin-top: 20px">
+      <div class="border border-secondary rounded" style="margin-top: 20px;background-color: rgba(238, 238, 238,0.75)">
         <div style="margin: 10px">
           <h3>Horaris disponibles per reunions:</h3>
           <ul>
             <ng-container *ngFor="let horari of horaris_admin">
               <div style="margin-bottom: 10px;margin-top: 3px">
                 <li>{{horari | date:'dd-MM-yyyy h:mm a'}}
-                  <button style="float: right;display: block" class="btn btn-primary btn-sm" (click)="escollirHorari(horari)">Escollir</button>
+                  <button style="float: right;display: block" class="btn btn-secondary btn-sm" (click)="escollirHorari(horari)">Escollir</button>
                 </li>
               </div>
             </ng-container>
@@ -18,8 +18,9 @@
         </div>
       </div>
     </div>
+    <div class="col-1"></div>
     <div class="col">
-      <div style="border: 1px solid black; margin-top: 20px">
+      <div class="border border-secondary rounded" style="margin-top: 20px;background-color: rgba(238, 238, 238,0.75)">
         <div style="margin: 10px">
           <h3>Els meus horaris:</h3>
           <ul>
